refator: ajuste da propreidade balnce para amount
