# src/application/dtos/transaction/CreateTransactionDto.ts
@@ -4,5 +4,5 @@ export interface CreateTransactionDto {
     userId: number;
     date: Date;
     type: TransactionType;
-    balance: number;
+    amount: number;
 }
