# src/application/dtos/transaction/TransactionOutputDto.ts
@@ -1,6 +1,6 @@
 export interface TransactionOutputDTO {
     id: number | null;
     typeTransaction: string;
-    balance: number;
+    amount: number;
     date: Date;
 }
